--- a/index/projects.html
+++ b/index/projects.html
@@ -14,20 +14,20 @@
     <meta property="og:url" content="https://your-portfolio-url.com/projects.html">
     <meta property="og:image" content="https://your-portfolio-url.com/projects-preview.jpg">
 
-    <link rel="stylesheet" href="/portfolio-Website/css/common.css">
-    <link rel="stylesheet" href="/portfolio-Website/css/projects.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/projects.css">
     <link rel="icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="nav-links">
-            <a href="/portfolio-Website/index/index.html">Home</a>
-            <a href="/portfolio-Website/index/skills.html">Skills</a>
-            <a href="/portfolio-Website/index/education-certifications.html">Education & Certifications</a>
+            <a href="/index/index.html">Home</a>
+            <a href="/index/skills.html">Skills</a>
+            <a href="/index/education-certifications.html">Education & Certifications</a>
         </div>
         <div class="navbar-actions">
-            <a href="/portfolio-Website/index/resume.html" class="btn resume-button-style" aria-label="View Resume">Resume</a>
+            <a href="/index/resume.html" class="btn resume-button-style" aria-label="View Resume">Resume</a>
             <button class="btn hire-me" aria-label="Hire Me">Hire Me</button>
         </div>
     </nav>
