--- a/index/resume.html
+++ b/index/resume.html
@@ -16,18 +16,18 @@
 
   
 
-    <link rel="stylesheet" href="/portfolio-Website/css/common.css">
-    <link rel="stylesheet" href="/portfolio-Website/css/resume.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/resume.css">
     <link rel="icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="nav-links">
-            <a href="/portfolio-Website/index/index.html">Home</a>
-            <a href="/portfolio-Website/index/skills.html">Skills</a>
-            <a href="/portfolio-Website/index/projects.html">Projects</a>
-            <a href="/portfolio-Website/index/education-certifications.html">Education & Certifications</a>
+            <a href="/index/index.html">Home</a>
+            <a href="/index/skills.html">Skills</a>
+            <a href="/index/projects.html">Projects</a>
+            <a href="/index/education-certifications.html">Education & Certifications</a>
         </div>
         <div class="navbar-actions">
             <button class="btn hire-me" aria-label="Hire Me">Hire Me</button>
