--- a/index/projects.html
+++ b/index/projects.html
@@ -22,7 +22,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-links">
-            <a href="/index/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="/index/skills.html">Skills</a>
             <a href="/index/education-certifications.html">Education & Certifications</a>
         </div>
