--- a/index/resume.html
+++ b/index/resume.html
@@ -24,7 +24,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-links">
-            <a href="/index/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="/index/skills.html">Skills</a>
             <a href="/index/projects.html">Projects</a>
             <a href="/index/education-certifications.html">Education & Certifications</a>
