--- a/index/skills.html
+++ b/index/skills.html
@@ -22,7 +22,7 @@
 <body>
     <nav class="navbar">
         <div class="nav-links">
-            <a href="/index/index.html">Home</a>
+            <a href="/index.html">Home</a>
             <a href="/index/projects.html">Projects</a>
             <a href="/index/education-certifications.html">Education & Certifications</a>
 
