--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://your-portfolio-url.com/preview-image.jpg">
 
     <link rel="icon" href="/assets/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="/index/projects.html">Projects</a></li>
+                <li><a href="projects.html">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -46,25 +46,25 @@
             </h2>
             <div class="aboutme-space"></div>
             <div class="aboutme-cards">
-                <a href="/index/skills.html">
+                <a href="skills.html">
                     <div class="skills-card">
                         <span class="aboutme-card-icon">🛠️</span>
                         <span class="aboutme-card-title">Skills</span>
                     </div>
                 </a>
-                <a href="/index/education-certifications.html">
+                <a href="education-certifications.html">
                     <div class="education-card">
                         <span class="aboutme-card-icon">🎓</span>
                         <span class="aboutme-card-title">Education & Certifications</span>
                     </div>
                 </a>
-                <a href="/index/resume.html">
+                <a href="resume.html">
                     <div class="resume-card">
                         <span class="aboutme-card-icon">📄</span>
                         <span class="aboutme-card-title">Resume</span>
                     </div>
                 </a>
-                <a href="/index/projects.html">
+                <a href="projects.html">
                     <div class="projects-card">
                         <span class="aboutme-card-icon">💼</span>
                         <span class="aboutme-card-title">Projects</span>
