--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="/index/projects.html">Projects</a></li>
+                <li><a href="index/projects.html">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -46,25 +46,25 @@
             </h2>
             <div class="aboutme-space"></div>
             <div class="aboutme-cards">
-                <a href="/index/skills.html">
+                <a href="index/skills.html">
                     <div class="skills-card">
                         <span class="aboutme-card-icon">🛠️</span>
                         <span class="aboutme-card-title">Skills</span>
                     </div>
                 </a>
-                <a href="/index/education-certifications.html">
+                <a href="index/education-certifications.html">
                     <div class="education-card">
                         <span class="aboutme-card-icon">🎓</span>
                         <span class="aboutme-card-title">Education & Certifications</span>
                     </div>
                 </a>
-                <a href="/index/resume.html">
+                <a href="index/resume.html">
                     <div class="resume-card">
                         <span class="aboutme-card-icon">📄</span>
                         <span class="aboutme-card-title">Resume</span>
                     </div>
                 </a>
-                <a href="/index/projects.html">
+                <a href="index/projects.html">
                     <div class="projects-card">
                         <span class="aboutme-card-icon">💼</span>
                         <span class="aboutme-card-title">Projects</span>
