--- a/index/projects.html
+++ b/index/projects.html
@@ -14,8 +14,8 @@
     <meta property="og:url" content="https://your-portfolio-url.com/projects.html">
     <meta property="og:image" content="https://your-portfolio-url.com/projects-preview.jpg">
 
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/projects.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/projects.css">
     <link rel="icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 
