--- a/index/skills.html
+++ b/index/skills.html
@@ -14,8 +14,8 @@
     <meta property="og:url" content="https://your-portfolio-url.com/skills.html">
     <meta property="og:image" content="https://your-portfolio-url.com/skills-preview.jpg">
 
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/skills.css">
+    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/skills.css">
     <link rel="icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 
