--- a/index/education-certifications.html
+++ b/index/education-certifications.html
@@ -14,8 +14,8 @@
     <meta property="og:url" content="https://your-portfolio-url.com/education-certifications.html">
     <meta property="og:image" content="https://your-portfolio-url.com/education-preview.jpg">
 
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/education-certifications.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/education-certifications.css">
     <link rel="icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 
