--- a/index/resume.html
+++ b/index/resume.html
@@ -16,8 +16,8 @@
 
   
 
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/resume.css">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/resume.css">
     <link rel="icon" href="/assets/logo.png" type="image/x-icon">
 </head>
 
