--- a/index/resume.html
+++ b/index/resume.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/resume.css">
-    <link rel="icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="icon" href="../assets/logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -38,11 +38,11 @@
         <section id="resume-display-section" class="resume-display-section">
             <h1>My Resume</h1>
             <div class="resume-document-container">
-                <iframe src="/assets/Vinayak_Mishra_Resume.pdf#toolbar=0&navpanes=0&scrollbar=0&view=FitH" class="resume-iframe" title="Vinayak Mishra's Resume">
-                    Your browser does not support embedded PDFs. Please <a href="/assets/Vinayak_Mishra_Resume.pdf" download="Vinayak_Mishra_Resume.pdf">download the PDF</a> to view it.
+                <iframe src="../assets/Vinayak_Mishra_Resume.pdf#toolbar=0&navpanes=0&scrollbar=0&view=FitH" class="resume-iframe" title="Vinayak Mishra's Resume">
+                    Your browser does not support embedded PDFs. Please <a href="../assets/Vinayak_Mishra_Resume.pdf" download="Vinayak_Mishra_Resume.pdf">download the PDF</a> to view it.
                 </iframe>
             </div>
-            <a href="/assets/Vinayak_Mishra_Resume.pdf" download="Vinayak_Mishra_Resume.pdf" class="btn download-resume-btn">Download Resume</a>
+            <a href="../assets/Vinayak_Mishra_Resume.pdf" download="Vinayak_Mishra_Resume.pdf" class="btn download-resume-btn">Download Resume</a>
         </section>
 
         <!-- Contact Section -->
