--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://your-portfolio-url.com/">
     <meta property="og:image" content="https://your-portfolio-url.com/preview-image.jpg">
 
-    <link rel="icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="icon" href="../assets/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/home.css">
 </head>
 
