--- a/index/skills.html
+++ b/index/skills.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="../css/common.css">
     <link rel="stylesheet" href="../css/skills.css">
-    <link rel="icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="icon" href="../assets/logo.png" type="image/x-icon">
 </head>
 
 <body>
