--- a/index/education-certifications.html
+++ b/index/education-certifications.html
@@ -14,9 +14,9 @@
     <meta property="og:url" content="https://your-portfolio-url.com/education-certifications.html">
     <meta property="og:image" content="https://your-portfolio-url.com/education-preview.jpg">
 
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="/css/education-certifications.css">
-    <link rel="icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/common.css">
+    <link rel="stylesheet" href="../css/projects.css">
+    <link rel="icon" href="../assets/logo.png" type="image/x-icon">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
             </p>
             <div class="certificates-list">
                 <div class="certificate-card">
-                    <h2>Programming Tactics</h2>
+                    <h2>Programming Tactics Internship</h2>
                     <p>Issued on 28th july 2023</p>
                     <iframe src="../assets/Vinayak Mishra Internship SATI.pdf#toolbar=0&navpanes=0&scrollbar=0&view=FitH"
                         type="application/pdf"
